--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,50 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #fff;
+  max-width: 1440px;
 }
 ul li {
   list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+}
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
 }
 
+/* nav */
+.conteiner {
+  display: flex;
+  border-bottom: 1px solid #e7e9fc;
+  max-width: 1440px;
+  margin-top: 24px;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+}
+.conteiner li {
+  display: flex;
+}
+.conteiner .logo {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 0px;
+}
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -26,67 +64,7 @@ ul li {
 .logo-studio {
   color: #2e2f42;
 }
-.address {
-  font-style: normal;
-}
-header ul {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-.title {
-  background-color: #2e2f42;
-}
-.title-text {
-  font-weight: bold;
-  font-size: 56px;
-  letter-spacing: 0.02em;
-  line-height: 1.07;
-  text-align: center;
-  color: #fff;
-}
 
-.caption {
-  font-weight: 500;
-  font-size: 20px;
-  letter-spacing: 0.02em;
-  line-height: 1.2;
-  color: #2e2f42;
-}
-a {
-  font-size: 12px;
-  line-height: 16px;
-  letter-spacing: 4%;
-  direction: underline;
-}
-.text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-
-  color: #434455;
-}
-
-.section-our-team {
-  background-color: #f4f4fd;
-}
-.section-title {
-  font-weight: bold;
-  font-size: 36px;
-  letter-spacing: 0.02em;
-  line-height: 1.11;
-  text-align: center;
-  text-transform: capitalize;
-  color: #2e2f42;
-}
-.section-card {
-  background-color: #fff;
-}
-
-/* nav */
 .nav {
   font-weight: 500;
   font-size: 16px;
@@ -112,6 +90,36 @@ a {
   color: #404bbf;
 }
 
+.address {
+  font-style: normal;
+}
+
+/* main */
+header ul {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.conteiner-title .title-text {
+  margin: 0 472px 48px;
+  padding-top: 188px;
+}
+
+.title {
+  background-color: #2e2f42;
+  width: 1440px;
+  height: 600px;
+}
+.title-text {
+  font-weight: bold;
+  font-size: 56px;
+  letter-spacing: 0.02em;
+  line-height: 1.07;
+  text-align: center;
+  color: #fff;
+}
 /* button */
 .button {
   font-family: "Roboto", sans-serif;
@@ -122,13 +130,119 @@ a {
   background-color: #4d5ae5;
   color: #fff;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+  border-radius: 4px;
+  width: 169px;
+  height: 56px;
+  margin: 48px 635px;
 }
+
 .button:hover,
 .button:focus {
   background-color: #404bbf;
 }
+.caption {
+  font-weight: 500;
+  font-size: 20px;
+  letter-spacing: 0.02em;
+  line-height: 1.2;
+  color: #2e2f42;
+}
+a {
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 4%;
+  direction: underline;
+}
+.text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+
+  color: #434455;
+}
+.conteiner-advent ul {
+  display: flex;
+  align-items: center;
+  justify-items: flex-start;
+  flex-direction: row;
+  gap: 24px;
+}
+.conteiner-advent {
+  margin: 120px 156px;
+}
+
+.section-our-team {
+  background-color: #f4f4fd;
+}
+.section-title {
+  font-weight: bold;
+  font-size: 36px;
+  letter-spacing: 0.02em;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+.section-card {
+  background-color: #fff;
+}
+.conteiner-team h3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+  padding: 32px 16px 8px;
+}
+.conteiner-team p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+  padding-bottom: 32px;
+}
+.conteiner-team ul {
+  display: flex;
+  align-items: center;
+  justify-items: flex-start;
+  flex-direction: row;
+  gap: 24px;
+}
+.conteiner-team {
+  padding-left: 173px;
+  padding-right: 173px;
+  padding-bottom: 116px;
+  margin-bottom: 124px;
+}
+.conteiner-team .section-title {
+  padding-top: 124px;
+  padding-bottom: 72px;
+}
+.conteiner-portfolio ul {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  row-gap: 24px;
+  column-gap: 48px;
+  margin: 120px 156px;
+  width: 1128px;
+  width: calc((100%-48px) / 3);
+}
+
+/* footer */
 .footer {
   background-color: #2e2f42;
+  width: 1440px;
+  height: 312px;
 }
 .logo-footer {
   font-family: "Raleway", sans-serif;
@@ -149,4 +263,14 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+}
+.conteiner-footer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 0px;
+  margin: 100px 1020px 100px 156px;
+  display: block;
+  padding-top: 100px;
 }
