--- a/css/style.css
+++ b/css/style.css
@@ -30,33 +30,30 @@ img {
   display: block;
   max-width: 100%;
 }
-
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
 /* nav */
 .head-nav {
   border-bottom: 1px solid #e7e9fc;
 }
-.conteiner {
+.container {
   width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
 }
-.conteiner-nav {
+.container-nav {
   display: flex;
 }
-.conteiner-nav-nav {
-  display: flex;
-  align-items: center;
-}
-.conteiner-nav li {
-  display: flex;
-}
-.conteiner-nav .logo {
+.container-nav-nav {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  flex-direction: row;
-  gap: 0px;
 }
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -67,7 +64,6 @@ img {
   color: #4d5ae5;
   text-decoration: none;
   margin-right: 76px;
-  margin-left: 156px;
 }
 .logo:hover {
   color: #404bbf;
@@ -78,7 +74,7 @@ img {
 .logo-studio {
   color: #2e2f42;
 }
-.conteiner-nav-menu {
+.container-nav-menu {
   display: flex;
   gap: 40px;
 }
@@ -111,34 +107,20 @@ img {
 .address {
   display: flex;
   gap: 40px;
-  margin-left: 332px;
 }
 
 /* main */
-header ul {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-.conteiner-title .title-text {
-  margin: 0 472px 48px;
-}
-
 .title {
   background-color: #2e2f42;
-  width: 1440px;
-  height: 600px;
   padding: 188px 0;
-  padding-left: 472px;
 }
+
 .title-text {
   font-weight: bold;
   font-size: 56px;
   letter-spacing: 0.02em;
   line-height: 1.07;
-  text-align: center;
+
   color: #fff;
   max-width: 496px;
 }
@@ -169,7 +151,8 @@ header ul {
 .our-advent {
   padding: 120px 0;
 }
-.conteiner-advent .section-title {
+
+.section-title {
   visibility: hidden;
 }
 .list-advent {
@@ -178,7 +161,7 @@ header ul {
   gap: 24px;
 }
 .list-advent-strategy {
-  width: calc((100% - 72px) / 4);
+  flex-basis: calc((100% - 72px) / 4);
 }
 .caption {
   font-weight: 500;
@@ -201,7 +184,7 @@ header ul {
   background-color: #f4f4fd;
   padding: 120px 0;
 }
-.section-title {
+.section-title-team {
   font-weight: bold;
   font-size: 36px;
   letter-spacing: 0.02em;
@@ -218,7 +201,7 @@ header ul {
 }
 .section-card {
   background-color: #fff;
-  width: calc((100% - 72px) / 4);
+  width: calc((100%-72px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
 .name-position {
@@ -235,14 +218,23 @@ header ul {
   padding: 120px 0;
 }
 .section-title-portfolio {
+  font-weight: bold;
+  font-size: 36px;
+  letter-spacing: 0.02em;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
   margin-bottom: 72px;
 }
 .list-portfolio {
+  display: flex;
+  flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
 }
 .list-portfolio-item {
-  width: calc((100% - 48px) / 3);
+  flex-basis: calc((100% - 72px) / 3);
 }
 .name-category {
   padding: 32px 16px;
