--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,7 @@ img {
   max-width: 100%;
 }
 .visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+  visibility: hidden;
 }
 /* nav */
 .head-nav {
@@ -161,7 +157,7 @@ img {
   gap: 24px;
 }
 .list-advent-strategy {
-  flex-basis: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 .caption {
   font-weight: 500;
@@ -201,7 +197,7 @@ img {
 }
 .section-card {
   background-color: #fff;
-  width: calc((100%-72px) / 4);
+  width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
 .name-position {
@@ -234,7 +230,7 @@ img {
   row-gap: 48px;
 }
 .list-portfolio-item {
-  flex-basis: calc((100% - 72px) / 3);
+  width: calc((100% - 48px) / 3);
 }
 .name-category {
   padding: 32px 16px;
