--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,14 @@ img {
   max-width: 100%;
 }
 .visually-hidden {
-  visibility: hidden;
+  position: absolute !important;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
 }
 /* nav */
 .head-nav {
