--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,9 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+address {
+  margin-left: auto;
+}
 /* nav */
 .head-nav {
   border-bottom: 1px solid #e7e9fc;
@@ -53,6 +56,7 @@ img {
 }
 .container-nav {
   display: flex;
+  align-items: center;
 }
 .container-nav-nav {
   display: flex;
@@ -88,6 +92,7 @@ img {
   font-size: 16px;
   letter-spacing: 0.02em;
   line-height: 1.5;
+  display: block;
   color: #2e2f42;
   text-decoration: none;
   padding: 24px 0;
@@ -112,6 +117,8 @@ img {
 .address {
   display: flex;
   gap: 40px;
+  font-style: normal;
+  margin-left: auto;
 }
 
 /* main */
@@ -125,9 +132,12 @@ img {
   font-size: 56px;
   letter-spacing: 0.02em;
   line-height: 1.07;
-
+  margin: 0 auto;
   color: #fff;
   max-width: 496px;
+  margin-bottom: 48px;
+  text-align: center;
+  color: #fff;
 }
 /* button */
 .button {
@@ -143,7 +153,7 @@ img {
   border-radius: 4px;
   min-width: 169px;
   height: 56px;
-  margin: 48px 164px;
+  margin: 0 auto;
   border: none;
 }
 
@@ -215,6 +225,12 @@ img {
 .caption-name {
   text-align: center;
   margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+
+  color: #2e2f42;
 }
 .text-position {
   text-align: center;
@@ -248,6 +264,11 @@ img {
 }
 .caption-product {
   margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 /* footer */
