--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ address {
   color: #4d5ae5;
   text-decoration: none;
   margin-right: 76px;
+  transition: color 250ms ease-in-out cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo:hover {
   color: #404bbf;
@@ -96,18 +97,27 @@ address {
   color: #2e2f42;
   text-decoration: none;
   padding: 24px 0;
+  transition: color 250ms ease-in-out cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav:hover,
 .nav:focus {
   color: #404bbf;
 }
 
+.container-nav-menu .nav::after {
+  content: "";
+  width: 48px;
+  height: 4px;
+  border-bottom: 2px;
+  background: #404bbf;
+}
 .address-info {
   font-size: 16px;
   color: #434455;
   text-decoration: none;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition: color 250ms ease-in-out cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-info:hover,
 .address-info:focus {
@@ -125,6 +135,13 @@ address {
 .title {
   background-color: #2e2f42;
   padding: 188px 0;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/people-office1.jpg), url(/images/Dark-bg.jpg);
+  max-width: 1440px;
 }
 
 .title-text {
@@ -155,6 +172,7 @@ address {
   height: 56px;
   margin: 0 auto;
   border: none;
+  transition: color 250ms ease-in-out cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -172,7 +190,6 @@ address {
 }
 .list-advent {
   display: flex;
-
   gap: 24px;
 }
 .list-advent-strategy {
@@ -218,6 +235,8 @@ address {
   background-color: #fff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .name-position {
   padding: 32px 0;
@@ -256,6 +275,40 @@ address {
 }
 .list-portfolio-item {
   width: calc((100% - 48px) / 3);
+  transition: color 250ms ease-in-out cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  overflow: hidden;
+}
+
+.list-portfolio-item:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+.list-portfolio-item-img {
+  position: relative;
+  overflow: hidden;
+  transition: color 250ms ease-in-out cubic-bezier(0.4, 0, 0.2, 1);
+}
+.overlay {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #4d5ae5;
+  transform: translateY(100%);
+  transition: transform 250ms ease-in-out;
+}
+.list-portfolio-item:hover .overlay {
+  transform: translateY(0);
 }
 .name-category {
   padding: 32px 16px;
@@ -270,7 +323,23 @@ address {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-
+/* svg */
+.icon {
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background: #f4f4fd;
+}
+.icon-social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 24px;
+  width: 232px;
+  height: 40px;
+}
 /* footer */
 .footer {
   background-color: #2e2f42;
@@ -298,4 +367,15 @@ address {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+}
+.footer-social-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
 }
