--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,8 @@ address {
 /* nav */
 .head-nav {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .container {
   width: 1158px;
@@ -94,22 +96,26 @@ address {
   letter-spacing: 0.02em;
   line-height: 1.5;
   display: block;
-  color: #2e2f42;
+  color: #404bbf;
   text-decoration: none;
   padding: 24px 0;
-  transition: color 250ms ease-in-out cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav:hover,
 .nav:focus {
   color: #404bbf;
 }
 
-.container-nav-menu .nav::after {
+.nav::after {
   content: "";
-  width: 48px;
+  left: 0;
+  border-radius: 2px;
   height: 4px;
-  border-bottom: 2px;
-  background: #404bbf;
+  width: 100%;
+  position: absolute;
+  bottom: -1px;
+  background-color: #404bbf;
 }
 .address-info {
   font-size: 16px;
@@ -117,7 +123,7 @@ address {
   text-decoration: none;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  transition: color 250ms ease-in-out cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-info:hover,
 .address-info:focus {
@@ -142,6 +148,9 @@ address {
     ),
     url(/images/people-office1.jpg), url(/images/Dark-bg.jpg);
   max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .title-text {
@@ -172,7 +181,7 @@ address {
   height: 56px;
   margin: 0 auto;
   border: none;
-  transition: color 250ms ease-in-out cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -181,6 +190,17 @@ address {
 }
 
 /* sectoin 2 */
+.icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  margin-bottom: 8px;
+  background: #f4f4fd;
+}
 .our-advent {
   padding: 120px 0;
 }
@@ -211,6 +231,32 @@ address {
   letter-spacing: 0.02em;
 
   color: #434455;
+}
+.social {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+}
+.icon-social {
+  width: 40px;
+  height: 40px;
+}
+.icon-social-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.icon-social-link:hover,
+.icon-social-link:focus {
+  background-color: #31d0aa;
+}
+.icon-social-link-icon {
+  fill: #f4f4fd;
 }
 .section-our-team {
   background-color: #f4f4fd;
@@ -273,22 +319,21 @@ address {
   column-gap: 24px;
   row-gap: 48px;
 }
+
 .list-portfolio-item {
   width: calc((100% - 48px) / 3);
-  transition: color 250ms ease-in-out cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
-  overflow: hidden;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .list-portfolio-item:hover {
+  transform: translateY(0%);
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .list-portfolio-item-img {
   position: relative;
   overflow: hidden;
-  transition: color 250ms ease-in-out cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .overlay {
   font-weight: 400;
   font-size: 16px;
@@ -303,9 +348,9 @@ address {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #4d5ae5;
+  background-color: #4d5ae5;
   transform: translateY(100%);
-  transition: transform 250ms ease-in-out;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-portfolio-item:hover .overlay {
   transform: translateY(0);
@@ -324,22 +369,7 @@ address {
   color: #2e2f42;
 }
 /* svg */
-.icon {
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  width: 264px;
-  height: 112px;
-  background: #f4f4fd;
-}
-.icon-social {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  gap: 24px;
-  width: 232px;
-  height: 40px;
-}
+
 /* footer */
 .footer {
   background-color: #2e2f42;
@@ -374,8 +404,16 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
+  margin-bottom: 16px;
+}
+.footer-container {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: row;
+  align-items: baseline;
+}
+.footer-logo-p {
+  margin-right: 120px;
+}
+.social-footer {
+  display: flex;
+  gap: 16px;
 }
