--- a/css/style.css
+++ b/css/style.css
@@ -139,15 +139,15 @@ address {
 
 /* main */
 .title {
-  background-color: #2e2f42;
-  padding: 188px 0;
   background-image: linear-gradient(
       to bottom,
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
     url(/images/people-office1.jpg), url(/images/Dark-bg.jpg);
+  background-color: #2e2f42;
   max-width: 1440px;
+  padding: 188px 0;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -181,9 +181,8 @@ address {
   height: 56px;
   margin: 0 auto;
   border: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .button:hover,
 .button:focus {
   background-color: #404bbf;
@@ -241,6 +240,7 @@ address {
 .icon-social {
   width: 40px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-social-link {
   width: 100%;
@@ -250,8 +250,11 @@ address {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-social-link:hover,
+.icon-social-link:hover {
+  background-color: #31d0aa;
+}
 .icon-social-link:focus {
   background-color: #31d0aa;
 }
@@ -340,9 +343,7 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 40px 32px;
   position: absolute;
   top: 0;
   left: 0;
