--- a/css/style.css
+++ b/css/style.css
@@ -419,3 +419,26 @@ address {
   display: flex;
   gap: 16px;
 }
+.icon-social-link-footer {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-social-link-footer:hover {
+  background-color: #31d0aa;
+}
+.icon-social-link-footer:focus {
+  background-color: #31d0aa;
+}
+.social-footer {
+  gap: 16px;
+  display: flex;
+  justify-content: center;
+  margin-top: 8px;
+}
