--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ address {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(/images/people-office1.jpg), url(/images/Dark-bg.jpg);
+    url(../images/people-office1.jpg);
   background-color: #2e2f42;
   max-width: 1440px;
   padding: 188px 0;
