--- a/css/style.css
+++ b/css/style.css
@@ -461,9 +461,10 @@ address {
   /* display: flex;
   align-items: center;
   justify-content: center; */
-
-  /* opacity: 0;
-  pointer-events: none; */
+}
+.in-open {
+  opacity: 0;
+  pointer-events: none;
 }
 .modal {
   position: absolute;
