--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,67 @@ address {
   margin-top: 8px;
 }
 
-/* -------- -------- */
+/* -------EMAIL FOOTER-------- */
+
+.email-footer-div {
+  padding-left: 80px;
+  display: block;
+}
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+.footer-form-label {
+  gap: 24px;
+}
+.input-email-footer {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  color: #ffffff;
+}
+.button-email-footer {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+}
+.footer-email-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.button-email-footer-svg {
+  fill: #fff;
+  margin-left: 16px;
+}
+.privacy-link {
+  color: #4d5ae5;
+}
+
+/* --------BACKDROP -------- */
 
 .backdrop {
   position: fixed;
@@ -457,10 +517,6 @@ address {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
 }
 .in-open {
   opacity: 0;
@@ -633,7 +689,7 @@ address {
   /* margin-right: 8px; */
 }
 
-.modal-check:checked + privacy {
+.modal-check:checked + .form-checkbox-text span {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
@@ -650,6 +706,7 @@ address {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
+  letter-spacing: 0.04em;
   color: #fff;
   cursor: pointer;
   background-color: #4d5ae5;
@@ -660,64 +717,4 @@ address {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 
   text-align: center;
-}
-
-/* -------EMAIL FOOTER-------- */
-
-.email-footer-div {
-  padding-left: 80px;
-  display: block;
-}
-.footer-form {
-  display: flex;
-  gap: 24px;
-}
-.footer-form-label {
-  gap: 24px;
-}
-.input-email-footer {
-  border: 1px solid #fff;
-  border-radius: 4px;
-  width: 264px;
-  height: 40px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background-color: transparent;
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
-  padding-left: 16px;
-  color: #ffffff;
-}
-.button-email-footer {
-  min-width: 165px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #ffffff;
-  cursor: pointer;
-  background-color: #4d5ae5;
-  border: none;
-  border-radius: 4px;
-}
-.footer-email-text {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #fff;
-  margin-bottom: 16px;
-}
-
-.button-email-footer-svg {
-  fill: #fff;
-  margin-left: 16px;
-}
-.privacy-link {
-  color: #4d5ae5;
 }
