--- a/css/style.css
+++ b/css/style.css
@@ -489,6 +489,14 @@ address {
   border: none;
   border-radius: 4px;
 }
+.footer-email-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
 
 .button-email-footer-svg {
   fill: #fff;
