--- a/css/style.css
+++ b/css/style.css
@@ -51,9 +51,10 @@ address {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .container {
-  width: 1158px;
+  /* width: 1158px; */
+  width: 320px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 0 16px;
 }
 .container-nav {
   display: flex;
@@ -194,14 +195,15 @@ address {
 /* section 2 */
 .icon {
   display: flex;
-  align-items: center;
+  display: none;
+  /* align-items: center;
   justify-content: center;
   height: 112px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   width: 264px;
   margin-bottom: 8px;
-  background: #f4f4fd;
+  background: #f4f4fd; */
 }
 .our-advent {
   padding: 120px 0;
@@ -212,28 +214,81 @@ address {
 }
 .list-advent {
   display: flex;
-  gap: 24px;
+  /* gap: 24px; */
+  flex-wrap: wrap;
+  gap: 72px;
 }
 .list-advent-strategy {
-  width: calc((100% - 72px) / 4);
+  /* width: calc((100% - 72px) / 4); */
 }
 .caption {
-  font-weight: 500;
-  font-size: 20px;
+  /* font-weight: 500;
+  font-size: 20px; */
+  font-weight: 700;
+  font-size: 36px;
+  /* line-height: 1.2; */
+  line-height: 1.11;
   letter-spacing: 0.02em;
-  line-height: 1.2;
   color: #2e2f42;
   margin-bottom: 8px;
+  text-align: center;
+  align-items: center;
 }
 
 .text {
-  font-weight: 400;
+  /* font-weight: 400; */
+font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.02em;
-
+  letter-spacing: 0.02em
   color: #434455;
 }
+
+.section-our-team {
+  background-color: #f4f4fd;
+  /* padding: 120px 0; */
+  padding: 96px 0;
+  
+}
+.section-title-team {
+  font-weight: 700;
+  font-size: 36px;
+  letter-spacing: 0.02em;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
+  margin-bottom: 72px;
+}
+.list-team {
+  display: flex;
+flex-wrap:wrap;
+gap: 72px;
+  /* gap: 24px; */
+}
+.section-card {
+  background-color: #fff;
+  /* width: calc((100% - 72px) / 4); */
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+.name-position {
+  padding: 32px 0;
+}
+.caption-name {
+  text-align: center;
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.text-position {
+  text-align: center;
+}
+
 .social {
   display: flex;
   justify-content: center;
@@ -264,50 +319,11 @@ address {
 .icon-social-link-icon {
   fill: #f4f4fd;
 }
-.section-our-team {
-  background-color: #f4f4fd;
-  padding: 120px 0;
-}
-.section-title-team {
-  font-weight: bold;
-  font-size: 36px;
-  letter-spacing: 0.02em;
-  line-height: 1.11;
-  text-align: center;
-  text-transform: capitalize;
-  color: #2e2f42;
-  margin-bottom: 72px;
-}
-.list-team {
-  display: flex;
-
-  gap: 24px;
-}
-.section-card {
-  background-color: #fff;
-  width: calc((100% - 72px) / 4);
-  border-radius: 0px 0px 4px 4px;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-}
-.name-position {
-  padding: 32px 0;
-}
-.caption-name {
-  text-align: center;
-  margin-bottom: 8px;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-
-  color: #2e2f42;
-}
-.text-position {
-  text-align: center;
-}
+/* ----PORTFOLIO----- */
 .portfolio {
-  padding: 120px 0;
+  /* padding: 120px 0; */
+  padding: 96px 0;
+
 }
 .section-title-portfolio {
   font-weight: bold;
@@ -315,19 +331,20 @@ address {
   letter-spacing: 0.02em;
   line-height: 1.11;
   text-align: center;
-  text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
 }
 .list-portfolio {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
+  /* column-gap: 24px;
+  row-gap: 48px; */
+  gap: 48px;
+
 }
 
 .list-portfolio-item {
-  width: calc((100% - 48px) / 3);
+  /* width: calc((100% - 48px) / 3); */
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-portfolio-item:hover {
@@ -372,12 +389,13 @@ address {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-/* svg */
+
 
 /* footer */
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
+  
 }
 .logo-footer {
   font-family: "Raleway", sans-serif;
@@ -390,6 +408,7 @@ address {
   text-decoration: none;
   display: inline-block;
   margin-bottom: 16px;
+  
 }
 .logo-studio-footer {
   color: #f4f4fd;
@@ -517,7 +536,7 @@ address {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.in-open {
+.is-open {
   opacity: 0;
   pointer-events: none;
 }
