--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ address {
   flex-direction: column;
   justify-content: space-between;
   overflow: auto;
+  z-index: 1;
 }
 .menu-close-btn {
   display: block;
@@ -142,6 +143,7 @@ address {
   flex-wrap: wrap;
   gap: 40px;
   margin-bottom: 40px;
+  transition: color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mob-nav:focus,
@@ -152,25 +154,28 @@ address {
 .mob-nav-item {
   margin-bottom: 40px;
 }
-
 .mob-address {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #434455;
-  text-decoration: none;
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+  margin-bottom: 48px;
 }
-.mob-address-li {
-  padding-bottom: 24px;
+.mob-address-item {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-address-item:hover,
+.mob-address-item:focus {
+  color: #404bbf;
 }
 
 .mob-menu-social {
+  display: flex;
   gap: 40px;
   margin-bottom: 40px;
   margin-top: 48px;
@@ -928,7 +933,7 @@ address {
         rgba(46, 47, 66, 0.7)
       ),
       url(../images/hero-img-dt.jpg);
-    /* max-width: 1440px; */
+    max-width: 1440px;
     padding: 188px 0;
     background-repeat: no-repeat;
     background-position: center;
